Bug 77951 - BISECTED regression "intel_pstate: Set turbo VID for BayTrail" causes stall on Intel NUC DN2820FYKH
Summary: BISECTED regression "intel_pstate: Set turbo VID for BayTrail" causes stall o...
Status: CLOSED CODE_FIX
Alias: None
Product: Power Management
Classification: Unclassified
Component: cpufreq (show other bugs)
Hardware: x86-64 Linux
: P1 normal
Assignee: Dirk Brandewie
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-15 13:45 UTC by Rune Petersen
Modified: 2015-07-22 01:08 UTC (History)
6 users (show)

See Also:
Kernel Version: 3.15
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments
dmidecode ouput for DN2820FYKH (13.19 KB, text/plain)
2014-06-16 17:34 UTC, Rune Petersen
Details
/proc/cpuinfo for DN2820FYKH (1.79 KB, text/plain)
2014-06-16 17:35 UTC, Rune Petersen
Details
Panic Transcription during boot (1.32 KB, application/octet-stream)
2014-06-18 23:10 UTC, Erich Eickmeyer
Details
/proc/cpuinfo for Erich Eickmeyer (3.59 KB, application/octet-stream)
2014-06-18 23:11 UTC, Erich Eickmeyer
Details
git bisect log for Erich Eickmeyer (1.58 KB, application/octet-stream)
2014-06-18 23:11 UTC, Erich Eickmeyer
Details
Patch to fix regression on N2820 (1.98 KB, patch)
2014-06-19 16:06 UTC, Dirk Brandewie
Details | Diff

Description Rune Petersen 2014-06-15 13:45:10 UTC
The hardware:
DN2820FYKH (BIOS version:0028)


The symptom:
The kernel stalls at "Loading, please wait" or sometimes at the the next line where udevd is launched.


I did a bisect which identified the commit 21855ff5bcbdd075e1c99772827a84912ab083dd "intel_pstate: Set turbo VID for BayTrail" as the cause.

I also confirmed it by reverting the commit on v3.15 which fixed the stall.
Comment 1 Dirk Brandewie 2014-06-16 14:01:53 UTC
What distribution are you using?  

Does the boot continue or is it hung there forever?

Can you attach the contents of /proc/cpuinfo and the output of dmidecode.

I will start tracking down a system like yours to reproduce the failure.
Comment 2 Rune Petersen 2014-06-16 17:32:42 UTC
forever is such a long time - a few times I have had it stalled for 10-15 min. before I forced a reboot.
Comment 3 Rune Petersen 2014-06-16 17:34:01 UTC
Created attachment 139981 [details]
dmidecode ouput for DN2820FYKH
Comment 4 Rune Petersen 2014-06-16 17:35:53 UTC
Created attachment 139991 [details]
/proc/cpuinfo for DN2820FYKH
Comment 5 Dirk Brandewie 2014-06-16 17:44:53 UTC
Is it possible to try the latest BIOS?  The BIOS affects the way P state requests are handled.  The requirement to set the turbo VID popped up in a recent update to the BIOS writers guide section on selecting P states.


I have hardware on the way in any case.
Comment 6 Rune Petersen 2014-06-16 18:51:34 UTC
updated the BIOS to 0034, the only change is that now the stall happens a little later.

it happens after:
    "sd 0:0:0:0: [sda] Attached SCSI device"
or the next line:
    "tsc: Refined TSC clocksource...."

I suspect it is more or less coincidental where the stall happen.
Comment 7 Erich Eickmeyer 2014-06-18 23:10:25 UTC
Created attachment 140341 [details]
Panic Transcription during boot

Transcription of image of panic during boot. If you would like the picture this was transcribed from, please let me know.
Comment 8 Erich Eickmeyer 2014-06-18 23:11:11 UTC
Created attachment 140351 [details]
/proc/cpuinfo for Erich Eickmeyer
Comment 9 Erich Eickmeyer 2014-06-18 23:11:53 UTC
Created attachment 140361 [details]
git bisect log for Erich Eickmeyer
Comment 10 Erich Eickmeyer 2014-06-18 23:13:10 UTC
Reference the attachments I just created. Stable kernels 3.14.6 and above fail to boot on my hardware.
Comment 11 Erich Eickmeyer 2014-06-19 05:09:39 UTC
Just tested Kernel 3.16.0-rc1, same result.
Comment 12 Fryderyk Dziarmagowski 2014-06-19 15:33:07 UTC
Same here with 0034 DN2820FYKH bios. Reverting above change solves the problem.
Comment 13 Dirk Brandewie 2014-06-19 16:06:31 UTC
Created attachment 140421 [details]
Patch to fix regression on N2820

Revert the bitmask changes that were part of the BIOS writers guide update
Comment 14 Rune Petersen 2014-06-19 20:19:09 UTC
That fixed for me, thank you Dirk.
Comment 15 Erich Eickmeyer 2014-06-19 23:19:38 UTC
Fixed for me as well on N3520 system. Thank you, Dirk.
Comment 16 Zhang Rui 2014-06-24 14:23:57 UTC
Dirk, you will push the patch to upstream, right?
Comment 17 Dirk Brandewie 2014-06-24 14:25:54 UTC
(In reply to Zhang Rui from comment #16)
> Dirk, you will push the patch to upstream, right?

Yes but it was 7 minutes after Rafael's vacation mail got to me ;-(
Comment 18 Len Brown 2015-07-22 01:08:31 UTC
in v3.16-rc5:

commit c16ed06024a6e699c332831dd50d8276744e3de8
Author: Dirk Brandewie <dirk.j.brandewie@intel.com>
Date:   Fri Jun 20 07:27:58 2014 -0700

    intel_pstate: Fix setting VID

Note You need to log in before you can comment on or make changes to this bug.